	* Makefile.am: Add @LIBFTDI1@ to avrdude_LDADD
	* avrftdi.c: Update from libftdi0 to libftdi1. Use libftdi1's function to
	find a device by vid/pid/serial instead of doing it ourself and add/update
	error messages. avrftdi_print is changed so that a message is printed when
	the verbosity level is greater or equal the message level, to have always-on
	messages.
	
2013-04-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac(AC_CONFIG_HEADERS): Replace the old AM_CONFIG_HEADER
	by this; automake 1.13+ barfs.

2013-03-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in (ATmega2564RFR2, ATmega1284RFR2, ATmega644RFR2):
	New devices

2013-01-30  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7724 Add TPI support for Bus Pirate using bitbang mode
	* buspirate.[ch]: added support for BusPirate Bitbanging
	* pgm_type.c: added entry for buspirate_bb
	* avrdude.conf.in: added entry for buspirate_bb

2013-01-30  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7936 Patch to support BusPirate AVR Extended Commands mode
	* buspirate.c: added support for BusPirate AVR Extended Commands mode
	* avrdude.1: added doc for nopagedread parameter
	* doc/avrdude.texi: added doc for nopagedread parameter

2013-01-30  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7723 Bus Pirate “raw-wire” mode which can run down to 5 kHz
	* buspirate.c: added raw wire mode
	* avrdude.1: added doc for rawfreq parameter
	* doc/avrdude.texi: added doc for rawfreq parameter

2013-01-30  Rene Liebscher <R.Liebscher@gmx.de>

	bug #37977 Support for Openmoko Debug Board
	* avrdude.conf.in: added openmoko entry

2013-01-29  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7932 Read USBtiny VID and PID from avrdude.conf if provided.
	* avrdude.conf.in: added usbpid, usbvid to usbtiny
	* usbtiny.[ch]: use usbpid, usbpid if provided in config file

2013-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #38172: avrftdi: Incorrect information in avrdude.conf